infrastructure/kargo/namespaces/kargo-system-resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kargo-system-resources
  labels:
    homelab.internal/first-party: 'true'
    homelab.internal/data-class: internal
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
