infrastructure/kargo/namespaces/kargo-system-resources/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kargo-system-resources-default-deny
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
